spacing fix

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -46,21 +46,20 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 8px;
   top: 15px;
-  right: 5px;
+  right: 1rem;
   @media screen and (min-width:30em) {
     font-size: 12px;
-    bottom: 5px;
-    right: 5px;
+    // bottom: 5px;
+    // right: 5px;
   }
   @media screen and (min-width:667px) {
     font-size: 14px;
-    bottom: 10px;
-    right: 10px;
+    // bottom: 10px;
+    // right: 10px;
   }
   @media screen and (min-width:768px) {
     font-size: 1rem;
-    bottom: 1rem;
-    right: 1rem;
+    // bottom: 1rem;
   }
 }
 
